src/assets/styles/common.css
/* Fonts */

@font-face {
    font-family: 'PT Serif';
    src: url('../fonts/pt_serif-web-regular-webfont.woff2') format('woff2'),
        url('../fonts/pt_serif-web-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'PT Serif';
    src: url('../fonts/pt_serif-web-bold-webfont.woff2') format('woff2'),
        url('../fonts/pt_serif-web-bold-webfont.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

#app {
    @apply font-sans;
}

.fserif {
    font-family: 'PT Serif';
    letter-spacing: 0.05em;
}

h1,
h2,
h3 {
    @apply font-serif;
    letter-spacing: 0.05em;
}

/* Basic */

h1 {
    text-transform: uppercase;
    text-align: center;
    font-size: 2.8em;
}

#app,
.btn,
a,
a:hover,
a:visited,
a:focus,
a:active {
    @apply text-white;
}

.btn__primary {
    border: 2px solid config('colors.white');
    padding: 0.5em 1.5em;
    text-transform: uppercase;
}

.btn__primary--red {
    @apply border-red text-red;
}

.btn--highlighted {
    @apply text-red;
}

html,
body,
#app {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

/* Source: https://css-tricks.com/keyboard-only-focus-styles/ */

*:focus:not(.focus-visible) {
    outline: none;
}

/* Source https://medium.com/appscope/designing-native-like-progressive-web-apps-for-ios-1b3cdda1d0e8 */
body {
    -webkit-tap-highlight-color: transparent;
    -webkit-user-select: none;
}

#offlineOverlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.95);
    z-index: 10;
    display: flex;
    justify-items: center;
    align-items: center;
    text-align: center;

    &>main {
        @apply font-serif;
        margin: auto;
        padding: 1rem;
        color: config('colors.red');
    }
}

:root {
    font-size: calc(15px + 6 * ((100vw - 320px) / 680));
}

.btn--close {
    @apply bg-white;
    position: absolute;
    right: 0;
    width: 32px;
    height: 32px;
}

.btn--close:hover {
    opacity: 1;
}

.btn--close:before,
.btn--close:after {
    position: absolute;
    top: 4px;
    left: 15px;
    content: ' ';
    height: 24px;
    width: 2px;
    @apply bg-red;
}

.btn--close:before {
    transform: rotate(45deg);
}

.btn--close:after {
    transform: rotate(-45deg);
}


/* Video player */
/* purgecss start ignore */

.video-js .vjs-big-play-button {
    border: 0 !important;
    background: 0 !important;
}

.video-js .vjs-big-play-button .vjs-icon-placeholder:before {
    content: "";
    background-image: url("../icons/playIcon.svg");
    background-repeat: no-repeat;
    background-size: 46px;
    background-position: 55% calc(50% - 0px);
    border: none !important;
    box-shadow: none !important;
}

/* purgecss end ignore */

.hidden {
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    height: 1px;
    width: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
}

